# Export-Deploy

./: .coveragerc  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  _version.py  codecov.yml  hello.md  ownertrust.txt  package_info.py  pyproject.toml  setup.py
.github/: CODEOWNERS  copy-pr-bot.yml  labeler.yml
.github/actions/test-template/: action.yml
.github/scripts/: check_imports.py
.github/workflows/: _build_container.yml  _update_dependencies.yml  build-docs.yml  build-test-publish-wheel.yml  build-trtllm-vllm-image.yml  changelog-build.yml  cicd-approve-test-queue.yml  cicd-main.yml  close-inactive-issue-pr.yml  code-linting.yml  community-bot.yml  copyright-check.yml  dco-check.yml  dependabot.yml  dependalot.yml  deploy-to-main.yaml  generate-lockfile.yml  install-test.yml  release-docs.yml  release-freeze.yml  release.yaml  test-codecov.yml  test-github-app.yml  update-lock.yml
.github/workflows/config/: .secrets.baseline  changelog-config.json
docker/: Dockerfile  Dockerfile.ci  Dockerfile.pytorch  Dockerfile.trtllm_vllm  Dockerfile.ubuntu  manifest.json
docker/common/: install.sh  install_conflicting_deps.sh  install_overrides.sh
docs/: autodoc2_docstrings_parser.py  conf.py  documentation.md  export-deploy-models.md  index.md  project.json  testing.md  versions1.json
docs/export/: index.md
docs/llm/: index.md
docs/llm/automodel/: automodel-in-framework.md  automodel-ray.md  automodel-trtllm.md  automodel_in_framework.md  automodel_ray.md  automodel_trtllm.md  index.md
docs/llm/mbridge/: gen_mbridge_ckpt.md  in-framework-ray.md  in-framework.md  index.md
docs/llm/megatron_lm/: in-framework-ray.md  in-framework.md  index.md
docs/llm/nemo_2/: gen_nemo2_ckpt.md  in-framework-ray.md  in-framework.md  index.md  send-query.md
docs/llm/nemo_models/: in-framework-ray.md  in_framework.md  in_framework_ray.md  index.md  nim.md  send-query.md  send_query.md
docs/mm/: index.md
docs/mm/nemo_2/: gen_nemo2_ckpt.md  in-framework.md  index.md
export_deploy_utils/: nemo_config.py  utils.py
nemo_deploy/: __init__.py  deploy_base.py  deploy_pytriton.py  deploy_ray.py  package_info.py  ray_utils.py  triton_deployable.py  utils.py
nemo_deploy/llm/: __init__.py  hf_deployable.py  hf_deployable_ray.py  megatronllm_deployable.py  megatronllm_deployable_ray.py  query_llm.py
nemo_deploy/llm/inference/: __init__.py  inference_base.py  nemo_io.py  nemo_utils.py  tron_utils.py
nemo_deploy/multimodal/: __init__.py  megatron_multimodal_deployable.py  megatron_multimodal_deployable_ray.py  nemo_multimodal_deployable.py  query_multimodal.py
nemo_deploy/nlp/: __init__.py  hf_deployable.py  hf_deployable_ray.py  megatronllm_deployable.py  megatronllm_deployable_ray.py  query_llm.py  trtllm_api_deployable.py
nemo_deploy/nlp/inference/: __init__.py  inference_base.py  tron_utils.py
nemo_deploy/nlp/model_configs/: __init__.py
nemo_deploy/service/: __init__.py  fastapi_interface_to_pytriton.py  fastapi_interface_to_pytriton_multimodal.py  rest_model_api.py
nemo_export/: __init__.py  onnx_llm_exporter.py  package_info.py  sentencepiece_tokenizer.py  tarutils.py  tensorrt_lazy_compiler.py  tensorrt_llm.py  tensorrt_llm_deployable_ray.py  tensorrt_llm_hf.py  tensorrt_mm_exporter.py  tiktoken_tokenizer.py  vllm_exporter.py  vllm_hf_exporter.py
nemo_export/huggingface/: __init__.py  export.py  gemma.py  lightning.py  utils.py
nemo_export/model_adapters/: masking.py  util.py
nemo_export/model_adapters/embedding/: embedding_adapter.py
nemo_export/model_adapters/reranker/: reranker_adapter.py
nemo_export/multimodal/: build.py  converter.py  run.py
nemo_export/quantize/: __init__.py  quantizer.py
nemo_export/trt_llm/: tensorrt_llm_build.py  tensorrt_llm_run.py  utils.py
nemo_export/trt_llm/converter/: model_converter.py  model_to_trt_llm_ckpt.py  (+1 more)
nemo_export/utils/: __init__.py  _mock_import.py  lora_converter.py  model_loader.py  utils.py
nemo_export/vllm/: engine.py  model_config.py  model_converters.py  model_loader.py  tokenizer_group.py
nemo_export_deploy/deploy/: __init__.py  deploy_base.py  deploy_pytriton.py  deploy_ray.py  ray_utils.py  utils.py
nemo_export_deploy/export/: onnx_llm_exporter.py  tensorrt_llm.py  tensorrt_mm_exporter.py  vllm_exporter.py  vllm_hf_exporter.py
nemo_export_deploy_common/: __init__.py  import_utils.py  package_info.py
requirements/: requirements.txt  requirements_deploy.txt  requirements_export.txt  requirements_te.txt  requirements_test.txt  requirements_trtllm.txt
scripts/export/: convert_nemo2_for_export.py  export_hf_to_nemo2.py  export_mm_to_trtllm.py  export_to_trt_llm.py
scripts/vlm/: import_hf.py
tests/deploy/: test_deploy_base.py  test_deploy_pytriton.py  test_deploy_query.py  test_deploy_ray.py  test_deployment_service.py  test_hf_deployable.py  test_megatronllm_deployable.py  test_query_multimodal.py  test_triton_deployable.py
tests/export/: test_export_onnx.py  test_mock_import.py  test_model_loading.py  test_onnx_llm_exporter.py  test_tensorrt_lazy_compiler.py  test_tiktoken_tokenizer.py  test_vllm_hf_exporter.py
tests/functional_tests/: L2_Launch_InFramework.sh  L2_Launch_ONNX_TRT.sh  L2_Launch_TRTLLM.sh  L2_Launch_other.sh  L2_Launch_vLLM.sh  L2_NeMo_2_Export_Deploy_Query_In_Framework.sh  L2_NeMo_2_Export_Deploy_Query_Ray.sh  L2_NeMo_2_Export_Deploy_Query_TRTLLM_Ray.sh  L2_NeMo_2_Export_Deploy_TRTLLM.sh  L2_NeMo_2_Export_HF_TRT_LLM.sh  L2_NeMo_2_Export_In_Framework.sh  L2_NeMo_2_Export_Qnemo_TRT_LLM.sh  L2_NeMo_2_Export_TRT_LLM.sh  L2_NeMo_2_Multimodal_Export_Deploy_Query.sh  L2_NeMo_2_VLLM_EXPORT.sh  L2_NeMo_2_VLLM_VISION.sh  L2_NeMo_2_vLLM_Export_Llama.sh  L2_NeMo_2_vLLM_Export_Mixtral.sh  L2_ONNX_TRT.sh  L2_ONNX_TRT_Embedding.sh  L2_ONNX_TRT_LLM_Embedding_Export.sh  L2_ONNX_TRT_LLM_Embedding_Export_INT8.sh  L2_TRTLLM_API_Deploy_Query.sh
tests/unit_tests/: L0_Unit_Tests_CPU.sh  L0_Unit_Tests_CPU_Export_Deploy.sh  L0_Unit_Tests_GPU.sh  L0_Unit_Tests_GPU_Export_Deploy.sh  conftest.py
tutorials/: llama_embedding_export_deploy.ipynb
(+201 files in other folders)
